--- a/campaign/self-scan.html
+++ b/campaign/self-scan.html
@@ -181,11 +181,13 @@
             // Look for the back camera
             let backCamera = cameras.find(cam => cam.label.toLowerCase().includes('back'));
             if (backCamera) {
+          console.log("back camera")
                 html5QrCode.start(backCamera.id, {
                     fps: 10,    // Scans per second
                     qrbox: 250  // Display scanning box of 250px
                 }, onScanSuccess, onScanFailure);  // Start with the back camera if found
             } else {
+          console.log("front camera camera")
                 html5QrCode.start(cameras[0].id, {
                     fps: 10,
                     qrbox: 250
