--- a/campaign/self-scan.html
+++ b/campaign/self-scan.html
@@ -182,16 +182,10 @@
             let backCamera = cameras.find(cam => cam.label.toLowerCase().includes('back'));
             if (backCamera) {
           console.log("back camera")
-                html5QrCode.start(backCamera.id, {
-                    fps: 10,    // Scans per second
-                    qrbox: 250  // Display scanning box of 250px
-                }, onScanSuccess, onScanFailure);  // Start with the back camera if found
+                html5QrCode.start(backCamera.id, { fps: 10, qrbox: { width: 250, height: 250 } }, onScanSuccess, onScanFailure);  // Start with the back camera if found
             } else {
           console.log("front camera camera")
-                html5QrCode.start(cameras[0].id, {
-                    fps: 10,
-                    qrbox: 250
-                }, onScanSuccess, onScanFailure);  // Use the first camera if no back camera is found
+                html5QrCode.start(cameras[0].id, { fps: 10, qrbox: { width: 250, height: 250 } }, onScanSuccess, onScanFailure);  // Use the first camera if no back camera is found
             }
         } else {
             alert('No cameras found. Please ensure your camera is connected.');
