--- a/campaign/self-scan.html
+++ b/campaign/self-scan.html
@@ -150,7 +150,7 @@
             </div>
         </section>
         <section class="right-column">
-            <video id="preview" style="width: 100%; height: 100%;"></video> <!-- Preview kamera akan tampil di sini -->
+            <video id="preview" style="width: 500px; height: 500px;"></video> <!-- Preview kamera akan tampil di sini -->
         </section>
     </main>
 </body>
