--- a/campaign/self-scan.html
+++ b/campaign/self-scan.html
@@ -179,12 +179,12 @@
             // Look for the back camera
             let backCamera = cameras.find(cam => cam.label.toLowerCase().includes('back'));
             if (backCamera) {
-                html5QrCode.start(backCamera.id, {
+          html5QrCode.start({facingMode:"environment"}, {
                     fps: 10,    // Optional, frame per seconds for qr code scanning
                     qrbox: { width: 250, height: 250 }  // Optional, if you want bounded box UI
                 }, onScanSuccess, onScanFailure);  // Start with the back camera if found
             } else {
-                html5QrCode.start(cameras[0].id, {
+          html5QrCode.start({facingMode:"user"}, {
                     fps: 10,    // Optional, frame per seconds for qr code scanning
                     qrbox: { width: 250, height: 250 }  // Optional, if you want bounded box UI
                 }, onScanSuccess, onScanFailure);  // Use the first camera if no back camera is found
