--- a/campaign/self-scan.html
+++ b/campaign/self-scan.html
@@ -150,7 +150,7 @@
             </div>
         </section>
         <section class="right-column">
-            <video id="preview" style="width: 300px; height: 300px;"></video> <!-- Preview kamera akan tampil di sini -->
+            <div id="preview" style="width: 300px; height: 300px;"></div> <!-- Preview kamera akan tampil di sini -->
         </section>
     </main>
 </body>
