enable qr scanner

--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -139,7 +139,7 @@
         </div>
     </header>
     <main>
-        <video id="preview" style="width: 100%; height: 100%;"></video> <!-- Preview kamera akan tampil di sini -->
+        <div id="preview" style="width: 100%; height: 100%;"></div> <!-- Preview kamera akan tampil di sini -->
     </main>
     <footer>
         <div class="camera-button">
@@ -169,113 +169,67 @@
     </section>
 
     <!-- Tambahkan script untuk scan QR code -->
-    <!-- <script> -->
-    <!--     let scanner = new Instascan.Scanner({ video: document.getElementById('preview'), scanPeriod: 5, mirror: false }); -->
-    <!--     let currentCameraIndex = 0; // Index untuk kamera yang sedang digunakan -->
-    <!--     let cameras = []; // Array untuk menyimpan semua kamera yang terdeteksi -->
-    <!---->
-    <!--     // Event listener ketika QR code berhasil dipindai -->
-    <!--     scanner.addListener('scan', function(content) { -->
-    <!--         console.log('QR Code detected: ', content); -->
-    <!--         document.getElementById('manualInput').value = content; -->
-    <!--         document.getElementById('ticketCode').innerText = content; -->
-    <!--         showPopup(); -->
-    <!--     }); -->
-    <!---->
-    <!--     // Mencari kamera yang tersedia dan memulai dengan kamera belakang jika ada -->
-    <!--     Instascan.Camera.getCameras().then(function(cameraList) { -->
-    <!--         cameras = cameraList; // Simpan daftar kamera -->
-    <!--         if (cameras.length > 0) { -->
-    <!--             // Cari kamera belakang -->
-    <!--             let backCamera = cameras.find(cam => cam.name.toLowerCase().includes('back')); -->
-    <!--             if (backCamera) { -->
-    <!--                 scanner.start(backCamera); // Mulai dengan kamera belakang jika ditemukan -->
-    <!--             } else { -->
-    <!--                 scanner.start(cameras[0]); // Jika tidak ada, gunakan kamera pertama -->
-    <!--             } -->
-    <!--         } else { -->
-    <!--             alert('No cameras found. Please ensure your camera is connected.'); -->
-    <!--             console.error('No cameras found.'); -->
-    <!--         } -->
-    <!--     }).catch(function(e) { -->
-    <!--         alert('Error accessing camera: ' + e); -->
-    <!--         console.error('Error accessing camera: ', e); -->
-    <!--     }); -->
-    <!---->
-    <!--     // Fungsi untuk mengganti kamera -->
-    <!--     function changeCamera() { -->
-    <!--         if (cameras.length > 1) { -->
-    <!--             // Beralih ke kamera berikutnya -->
-    <!--             currentCameraIndex = (currentCameraIndex + 1) % cameras.length; -->
-    <!--             scanner.start(cameras[currentCameraIndex]); -->
-    <!--         } else { -->
-    <!--             alert('No other cameras found.'); -->
-    <!--         } -->
-    <!--     } -->
-    <!-- </script> -->
+    <script>
+        let html5QrCode = new Html5Qrcode("preview");
+        let currentCameraIndex = 0;
+        let cameras = [];
 
+        // Function to handle QR code scan success
+        function onScanSuccess(decodedText, decodedResult) {
+            console.log("QR Code detected: ", decodedText);
+            document.getElementById('manualInput').value = decodedText;
+            document.getElementById('ticketCode').innerText = decodedText;
+            showPopup();  // Your custom function to display popup
+        }
 
-<script>
-    let html5QrCode = new Html5Qrcode("preview");
-    let currentCameraIndex = 0;
-    let cameras = [];
+        // Function to handle scan failure (optional)
+        function onScanFailure(error) {
+            console.warn(`Code scan error = ${error}`);
+        }
 
-    // Function to handle QR code scan success
-    function onScanSuccess(decodedText, decodedResult) {
-        console.log("QR Code detected: ", decodedText);
-        document.getElementById('manualInput').value = decodedText;
-        document.getElementById('ticketCode').innerText = decodedText;
-        showPopup();  // Your custom function to display popup
-    }
-
-    // Function to handle scan failure (optional)
-    function onScanFailure(error) {
-        console.warn(`Code scan error = ${error}`);
-    }
-
-    // Get available cameras and start scanning with the back camera if available
-    Html5Qrcode.getCameras().then(function(deviceCameras) {
-        cameras = deviceCameras; // Store the available cameras
-        if (cameras.length > 0) {
-            // Look for the back camera
-            let backCamera = cameras.find(cam => cam.label.toLowerCase().includes('back'));
-            if (backCamera) {
-                html5QrCode.start(backCamera.id, {
-                    fps: 10,    // Scans per second
-                    qrbox: 250  // Display scanning box of 250px
-                }, onScanSuccess, onScanFailure);
+        // Get available cameras and start scanning with the back camera if available
+        Html5Qrcode.getCameras().then(function(deviceCameras) {
+            cameras = deviceCameras; // Store the available cameras
+            if (cameras.length > 0) {
+                // Look for the back camera
+                let backCamera = cameras.find(cam => cam.label.toLowerCase().includes('back'));
+                if (backCamera) {
+                    html5QrCode.start(backCamera.id, {
+                        fps: 10,    // Scans per second
+                        qrbox: 250  // Display scanning box of 250px
+                    }, onScanSuccess, onScanFailure);
+                } else {
+                    html5QrCode.start(cameras[0].id, {
+                        fps: 10,
+                        qrbox: 250
+                    }, onScanSuccess, onScanFailure);  // If no back camera, use the first camera
+                }
             } else {
-                html5QrCode.start(cameras[0].id, {
-                    fps: 10,
-                    qrbox: 250
-                }, onScanSuccess, onScanFailure);  // If no back camera, use the first camera
+                alert("No cameras found. Please ensure your camera is connected.");
+                console.error("No cameras found.");
             }
-        } else {
-            alert("No cameras found. Please ensure your camera is connected.");
-            console.error("No cameras found.");
-        }
-    }).catch(function(e) {
-        alert("Error accessing camera: " + e);
-        console.error("Error accessing camera: ", e);
-    });
+        }).catch(function(e) {
+            alert("Error accessing camera: " + e);
+            console.error("Error accessing camera: ", e);
+        });
 
-    // Function to switch between cameras
-    function changeCamera() {
-        if (cameras.length > 1) {
-            currentCameraIndex = (currentCameraIndex + 1) % cameras.length;
-            html5QrCode.stop().then(() => {
-                html5QrCode.start(cameras[currentCameraIndex].id, {
-                    fps: 10,
-                    qrbox: 250
-                }, onScanSuccess, onScanFailure);
-            }).catch(err => {
-                console.error("Error switching camera: ", err);
-            });
-        } else {
-            alert("No other cameras found.");
+        // Function to switch between cameras
+        function changeCamera() {
+            if (cameras.length > 1) {
+                currentCameraIndex = (currentCameraIndex + 1) % cameras.length;
+                html5QrCode.stop().then(() => {
+                    html5QrCode.start(cameras[currentCameraIndex].id, {
+                        fps: 10,
+                        qrbox: 250
+                    }, onScanSuccess, onScanFailure);
+                }).catch(err => {
+                    console.error("Error switching camera: ", err);
+                });
+            } else {
+                alert("No other cameras found.");
+            }
         }
-    }
-</script>
+    </script>
 </body>
 <script>
     function showPopup() {
