--- a/campaign/self-scan.html
+++ b/campaign/self-scan.html
@@ -150,7 +150,7 @@
             </div>
         </section>
         <section class="right-column">
-            <div id="preview" style="width: 300px; height: 300px;"></div> <!-- Preview kamera akan tampil di sini -->
+            <div id="preview" style="width: 100%; height: 100%;"></div> <!-- Preview kamera akan tampil di sini -->
         </section>
     </main>
 </body>
@@ -179,14 +179,14 @@
             // Look for the back camera
             let backCamera = cameras.find(cam => cam.label.toLowerCase().includes('back'));
             if (backCamera) {
-          html5QrCode.start({facingMode:"environment"}, {
-                    fps: 10,    // Optional, frame per seconds for qr code scanning
-                    qrbox: { width: 250, height: 250 }  // Optional, if you want bounded box UI
+                html5QrCode.start(backCamera.id, {
+                    fps: 10,    // Scans per second
+                    qrbox: 250  // Display scanning box of 250px
                 }, onScanSuccess, onScanFailure);  // Start with the back camera if found
             } else {
-          html5QrCode.start({facingMode:"user"}, {
-                    fps: 10,    // Optional, frame per seconds for qr code scanning
-                    qrbox: { width: 250, height: 250 }  // Optional, if you want bounded box UI
+                html5QrCode.start(cameras[0].id, {
+                    fps: 10,
+                    qrbox: 250
                 }, onScanSuccess, onScanFailure);  // Use the first camera if no back camera is found
             }
         } else {
