--- a/campaign/self-scan.html
+++ b/campaign/self-scan.html
@@ -152,7 +152,7 @@
                 <h2 id="thankyou">Something error happens</h2>
                 <img src="../img/question.svg" alt="">
                 <div class="result-text">
-                    <h2 id="ticketCode-failed">123</h2>
+                    <h2 id="ticketCode-failed"></h2>
                     <p>Not found in the list</p>
                     <h2 id="ticketHolder">Wrong ticket / wrong event</h2>
                 </div>
