--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -150,7 +150,7 @@
         </div>
         <div class="input-manual">
             <input id="manualInput" type="number" placeholder="Enter Ticket Code">
-            <button class="buttonPrimary" onclick="showPopup(); document.getElementById('ticketCode').innerText = manualInput.value;">Submit</button>
+            <button class="buttonPrimary" onclick="confirmTicket(document.getElementById('manualInput').value); document.getElementById('ticketCode').innerText = manualInput.value;">Submit</button>
         </div>
     </footer>
 
