Adjust width and height

--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -139,7 +139,7 @@
         </div>
     </header>
     <main>
-        <div id="preview" style="width: 500px; min-height: 100px;"></div> <!-- Preview kamera akan tampil di sini -->
+        <div id="preview" style="width: 500px; height: 500px;"></div> <!-- Preview kamera akan tampil di sini -->
     </main>
     <footer>
         <div class="camera-button">
