--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -137,7 +137,7 @@
         </div>
     </header>
     <main>
-        <div id="preview" style="width: 500px; height: 500px;"></div> <!-- Preview kamera akan tampil di sini -->
+        <div id="preview" style="min-width: 300px; height: 300px;"></div> <!-- Preview kamera akan tampil di sini -->
     </main>
     <footer>
         <div class="camera-button">
