--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../img/awhl.svg">
     
-    <!-- Tambahkan library Instascan -->
+<!-- Tambahkan library html5-qrcode -->
 <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
     <style>
@@ -142,7 +142,7 @@
     <footer>
         <div class="camera-button">
             <div class="buttonOutline buttonSmall" onclick="changeCamera()" style="flex-grow: 1;">
-                <img src="../img/camera.svg" alt="">
+j               <img src="../img/camera.svg" alt="">
                 <a>Change Camera</a></div>
             <div class="buttonPrimary" onclick="window.location.href = 'scan.html'">Scan Other Ticket</div>
         </div>
