--- a/campaign/self-scan.html
+++ b/campaign/self-scan.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../img/awhl.svg">
 
-<!-- Tambahkan library Instascan -->
+<!-- Tambahkan library html5-qrcode -->
 <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
 <style>
