--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -83,9 +83,9 @@
         .input-manual input {
             flex-grow: 1;
         }
-        video {
-            border: 2px solid #000;
-        }
+        /* video { */
+        /*     border: 2px solid #000; */
+        /* } */
         section {
             position: fixed;
             top: 0;
