--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -83,9 +83,9 @@
         .input-manual input {
             flex-grow: 1;
         }
-        /* video { */
-        /*     border: 2px solid #000; */
-        /* } */
+        video {
+            border: 2px solid #000;
+        }
         section {
             position: fixed;
             top: 0;
@@ -137,7 +137,7 @@
         </div>
     </header>
     <main>
-        <div id="preview" style="width: 500px; min-height: 100px;"></div> <!-- Preview kamera akan tampil di sini -->
+        <div id="preview" style="width: 640px; min-height: 100px;"></div> <!-- Preview kamera akan tampil di sini -->
     </main>
     <footer>
         <div class="camera-button">
